# gravitational-lensing-toolkit

./: .env.example  .gitignore  BACKEND_FRONTEND_INTEGRATION.md  COMPLETE_IMPROVEMENTS_SUMMARY.md  Dockerfile  Dockerfile.streamlit  ERROR_FIX_REPORT.md  FEATURES.md  FINAL_STATUS_REPORT.md  FINAL_VALIDATION_REPORT.md  GAP_FIXES_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  LATEST_IMPROVEMENTS.md  LICENSE  README.md  VALIDATION_REPORT.md  alembic.ini  demo_wave_optics.py  docker-compose.yml  environment.yml  launch_api.sh  launch_streamlit.bat  launch_streamlit.sh  pyproject.toml  repro_backend_bug.py  requirements-dev.txt  requirements.txt
api/: __init__.py  analysis_routes.py  auth.py  auth_routes.py  main.py  models.py  monitoring.py  secure_logging.py  security_utils.py
app/: Home.py  __init__.py  error_handler.py  main.py  styles.py  utils.py
benchmarks/: __init__.py  comparisons.py  metrics.py  pinn_inference.py  pinn_results.json  profiler.py  run_benchmark.py  runner.py  visualization.py
database/: __init__.py  auth.py  crud.py  database.py  models.py
demos/: einstein_cross.yaml  jwst_cluster_demo.yaml  substructure_detection.yaml  twin_quasar.yaml
frontend/: README.md  __init__.py  api_client.py  app.py  components.py  requirements.txt  utils.py
migrations/: env.py
monitoring/: prometheus.yml
notebooks/: phase1_demo.ipynb  phase2_wave_demo.ipynb  phase3_dm_comparison.ipynb  phase4_time_delay_demo.ipynb  phase5a_generate_data.ipynb  phase5c_evaluate.ipynb  phase5d_advanced_training.ipynb
scripts/: benchmark_phase7.py  check_config.py  download_jwst_data.py  (+17 more)
(+259 files in other folders)
